--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Webpack Starter Kit</title>
+    <title>Travel Tracker</title>
   </head>
   <body>
-    <h1>Webpack Starter Kit</h1>
-
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
+    <header>
+      <h1>Travel Tracker</h1>
+    </header>
+    <section class='main'>
+      <section class='current-trips-area'>
+      </section>
+      <section class='upcoming-trips-area'>
+      </section>
+      <section class='past-trips-area'>
+      </section>
+    </section>
 
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
