Create section for total cost

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,9 @@
                 <button id="submit-btn" class="submit-btn" type="button" name="submit">Submit</button>
               </section>
           </form>
+          <section class='total-spent'>
+            <h3>Total Cost YTD</h3>
+          </section>
       </section>
       <section class='current-trips-area'>
       </section>
