Create Trips sections in html

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <section class='main'>
       <section class='trip-information-area'>
         <form class="request-trip-form "method="post">
-              <h3>Request A New Trip:</h3>
+              <h3>Book A Trip:</h3>
               <section class="form-container">
               <label for="trip-date">Trip Date:</label>
               <input id="trip-date" type="date" name="trip-date" value=""></input>
@@ -40,13 +40,15 @@
           </section>
       </section>
       <section class='current-trips-area'>
+        <h3>Current Trips</h3>
       </section>
       <section class='upcoming-trips-area'>
+        <h3>Upcoming Trips</h3>
       </section>
       <section class='past-trips-area'>
+        <h3>Past Trips</h3>
       </section>
     </section>
-
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
 </html>
