--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
               </section>
               <section class="form-container">
                 <label for="trip-destinations">Destination:</label>
-                <input id="trip-destinations" type="text" name="trip-destinations" list="destination-name">
+                <select name="destination-selector" id="destination-selector"></select>
                   <datalist id="destination-name">
                   </datalist>
                 </input>
