Add welcome class to h1

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <h1>Travel Tracker</h1>
+      <h1 class='welcome'>Travel Tracker</h1>
     </header>
     <section class='main'>
       <section class='trip-information-area'>
