Add p tag to display total amt spent in a year

--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,9 @@
                 <button id="submit-btn" class="submit-btn" type="button" name="submit">Submit</button>
               </section>
           </form>
-          <section class='total-spent'>
+          <section class='trip-expenses'>
             <h3>Total Cost YTD</h3>
+            <p class='total-spent'></p>
           </section>
       </section>
       <section class='current-trips-area'>
