--- a/src/index.html
+++ b/src/index.html
@@ -40,15 +40,15 @@
             <p class='total-spent'></p>
           </section>
       </section>
-      <section class='current-trips-area'>
+      <section class='trips-area'>
         <h3>Current Trips</h3>
       </section>
-      <section class='upcoming-trips-area'>
+      <!-- <section class='upcoming-trips-area'>
         <h3>Upcoming Trips</h3>
       </section>
       <section class='past-trips-area'>
         <h3>Past Trips</h3>
-      </section>
+      </section> -->
     </section>
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
