--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
               </section>
               <section class="form-container">
               <label for="trip-duration">Duration:</label>
-              <input id="trip-duration" type="number" name="trip-duration" min="0"></input>
+              <input id="trip-duration" type="number" name="trip-duration" min="1" max="999"></input>
               </section>
               <section class="form-container">
                 <label for="trip-travelers">Travelers:</label>
-                <input id="trip-travelers" type="number" name="trip-travelers" min="1"></input>
+                <input id="trip-travelers" type="number" name="trip-travelers" min="1" max="999"></input>
               </section>
               <section class="form-container">
                 <label for="trip-destinations">Destination:</label>
