Add hidden property to submit button

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
               </section>
               <section id="button"class="form-container">
                 <button id="estimated-cost-btn" class="estimated-cost-btn" type="button" name="cost">Estimated Cost</button>
-                <button id="submit-btn" class="submit-btn" type="button" name="submit">Submit</button>
+                <button id="submit-btn" class="submit-btn hidden" type="button" name="submit">Submit</button>
               </section>
           </form>
           <section class='trip-expenses'>
