--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                 <input id="trip-travelers" type="number" name="trip-travelers" aria-describedby="This is an input field for entering the total number of travelers for your trip" min="1" max="999"></input>
               </section>
               <section class="form-container">
-                <label for="trip-destinations">Destination:</label>
+                <label for="destination-selector">Destination:</label>
                 <select name="destination-selector" id="destination-selector" aria-describedby="This is a dropdown menu with an alphabetized list of destinations you can travel to"></select>
                   <!-- <datalist id="destination-name">
                   </datalist> -->
