Add meta charset due to lighthouse recommendations

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+     <meta charset="utf-8" name="description" content="A website that allows you to book an track your trips.">
     <title>Travel Tracker</title>
   </head>
   <body>
