--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,16 @@
       </div>
     </header>
     <section class='main'>
+      <article class="login-form">
+        <fieldset class="login">
+          <legend>Login</legend>
+          <form class="login">
+            <input type="text" id="username-input" placeholder="username" aria-label="username" required="required">
+            <input type="password" id="password-input" placeholder="password" aria-label="password" required="required">
+            <button type="button" class="login-button" name="login-button" label="login button">Login</button>
+          </form>
+        </fieldset>
+      </article>
       <section class='trip-information-area'>
         <form class="request-trip-form">
               <h2 class="request-title">Book A Trip:</h2>
