Add properties of hidden to traveler dashboard for login functionality

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
   </head>
   <body>
     <header>
-      <h2 class='welcome'></h2>
+      <h2 class='welcome hidden'></h2>
       <h1 class='title'>Travel Tracker</h1>
       <div class="right-header-div">
-        <section class='trip-expenses'>
+        <section class='trip-expenses hidden'>
           <h3>Total Cost YTD</h3>
           <p class='total-spent'></p>
         </section>
-        <button class="logout-button">Logout</button>
+        <button class="logout-button hidden">Logout</button>
       </div>
     </header>
     <section class='main'>
@@ -27,7 +27,7 @@
           </form>
         </fieldset>
       </article>
-      <section class='trip-information-area'>
+      <section class='trip-information-area hidden'>
         <form class="request-trip-form">
               <h2 class="request-title">Book A Trip:</h2>
               <section class="form-container">
@@ -55,7 +55,7 @@
               </section>
           </form>
       </section>
-      <section class='trips-area'>
+      <section class='trips-area hidden'>
         <h4>Current Trips</h4>
       </section>
       <!-- <section class='upcoming-trips-area'>
