--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <h1 class='title'>Travel Tracker</h1>
       <div class="right-header-div">
         <section class='trip-expenses hidden'>
-          <h3>Total Cost YTD</h3>
+          <h3>Annual Travel Expenses:</h3>
           <p class='total-spent'></p>
         </section>
         <button class="logout-button hidden">Logout</button>
@@ -32,7 +32,7 @@
               <h2 class="request-title">Book A Trip:</h2>
               <section class="form-container">
               <label class="booking-label" for="trip-date">Trip Date:</label>
-              <input id="trip-date" type="date" name="trip-date" aria-describedby="This is a calendar where you select departure date of your trip" value=""></input>
+              <input id="trip-date" type="date" min="" name="trip-date" aria-describedby="This is a calendar where you select departure date of your trip" value=""></input>
               </section>
               <section class="form-container">
               <label class="booking-label" for="trip-duration">Duration:</label>
@@ -45,8 +45,6 @@
               <section class="form-container">
                 <label class="booking-label" for="destination-selector">Destination:</label>
                 <select name="destination-selector" id="destination-selector" aria-describedby="This is a dropdown menu with an alphabetized list of destinations you can travel to"></select>
-                  <!-- <datalist id="destination-name">
-                  </datalist> -->
                 </input>
               </section>
               <section id="button"class="form-container form-button">
