Add section to login for styling

--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,18 @@
       </div>
     </header>
     <section class='main'>
-      <article class="login-form">
-        <fieldset class="login">
-          <legend>Login</legend>
-          <form class="login">
-            <input type="text" id="username-input" placeholder="username" aria-label="username" required="required">
-            <input type="password" id="password-input" placeholder="password" aria-label="password" required="required">
-            <button type="button" class="login-button" name="login-button" label="login button">Login</button>
-          </form>
-        </fieldset>
-      </article>
+      <section class="login-area">
+        <article class="login-form">
+          <fieldset class="login">
+            <legend>Login</legend>
+            <form class="login">
+              <input type="text" id="username-input" placeholder="username" aria-label="username" required="required">
+              <input type="password" id="password-input" placeholder="password" aria-label="password" required="required">
+              <button type="button" class="login-button" name="login-button" label="login button">Login</button>
+            </form>
+          </fieldset>
+        </article>
+      </section>
       <section class='trip-information-area hidden'>
         <form class="request-trip-form">
               <h2 class="request-title">Book A Trip:</h2>
