--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <legend></legend>
             <form class="login">
               <label class="login-input" for="Username">Username</label>
-              <input type="text" id="username-input" placeholder="username" aria-label="username" required="required">
+              <input type="text" autocomplete="off" id="username-input" placeholder="username" aria-label="username" required="required">
               <label class="login-input" for="Password">Password</label>
               <input type="password" id="password-input" placeholder="password" aria-label="password" required="required">
               <button type="button" class="login-button" name="login-button" label="login button">Login</button>
